# vietnamese-humanizer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.vi.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.vi.md  CONTRIBUTING.md  CONTRIBUTING.vi.md  LICENSE  LICENSE.vi.md  README.md  README.vi.md  ROADMAP.md  ROADMAP.vi.md  SECURITY.md  SECURITY.vi.md  pyproject.toml
.codex/: feature-gap-progress.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  evaluation_report.yml  pattern_proposal.yml
.github/workflows/: ci.yml  release.yml  web-ci.yml
benchmarks/: README.md  case.schema.json  review-result.schema.json  rubric.md
benchmarks/cases/: grammar.jsonl  humanizer.jsonl  style.jsonl  translationese.jsonl
benchmarks/expected/: README.md
benchmarks/results/: README.md
docs/: README.md  architecture.md  evaluation-methodology.md  generated-patterns.md  limitations.md  maintainer-guide.md  maintenance-agent-prompt.md  pattern-authoring-guide.md  research-notes.md
docs/plans/: 2026-07-22-feature-gap-roadmap.md  2026-07-22-wave1-implementation.md
examples/: examples.jsonl  schema.json
patterns/: grammar.yml  humanizer.yml  schema.json  style.yml  translationese.yml
scripts/: __init__.py  _shared.py  check_release_consistency.py  dev.py  generate_pattern_docs.py  lint_vietnamese.py  run_benchmarks.py  validate_examples.py  validate_patterns.py  validate_skills.py
skills/grammar-checker-vi/: README.md  SKILL.md
skills/grammar-checker-vi/references/: checks.md  common-errors.md  examples.md  punctuation.md
skills/humanizer-vi/: README.md  SKILL.md
skills/humanizer-vi/assets/: review-template.md
skills/humanizer-vi/references/: evaluation.md  examples.md  patterns.md  preservation-rules.md  registers.md  workflow.md
skills/style-guide-vi/: README.md  SKILL.md
skills/style-guide-vi/references/: capitalization.md  examples.md  formatting.md  numbers-dates-units.md  pronouns.md  terminology.md
skills/translationese-cleaner-vi/: README.md  SKILL.md
skills/translationese-cleaner-vi/references/: examples.md  false-positives.md  patterns.md
src/vietnamese_writing_skills/: __init__.py
src/vietnamese_writing_skills/cli/: __init__.py  benchmarks.py  check_release_consistency.py  dev.py  generate_docs.py  lint.py  validate_examples.py  validate_patterns.py  validate_skills.py
src/vietnamese_writing_skills/core/: __init__.py  benchmark.py  examples.py  frontmatter.py  paths.py  patterns.py
src/vietnamese_writing_skills/data/: __init__.py
tests/: test_benchmarks_and_docs.py  test_dev_script.py  test_frontend_capabilities_contract.py  test_frontend_lint_contract.py  test_frontend_metadata_contract.py  test_lint_vietnamese.py  test_package.py  test_release_contract.py  test_validate_examples.py  test_validate_patterns.py  test_validate_skills.py
tests/fixtures/: mechanical_article.md  natural_article.md
web/: GEMINI_PROMPT.md  PLAN.md  README.md
web/backend/: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt
web/backend/api/: index.py
web/backend/app/: capabilities.py  config.py  main.py  schemas.py
web/backend/app/db/: database.py  models.py
web/backend/app/routers/: admin.py  contributions.py  health.py  lint.py  patterns.py  rewrite.py
web/backend/app/services/: contributions.py  linter.py  rewriter.py
web/backend/tests/: conftest.py  test_admin.py  test_config.py  test_contributions.py  test_lint.py  test_patterns.py  test_rewrite.py
web/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/app/contribute/: page.tsx
web/frontend/components/: CapabilityNav.tsx  ContributeForm.tsx  Disclaimer.tsx  Editor.tsx  IssueCard.tsx  IssueList.tsx  RewritePanel.tsx
web/frontend/lib/: api.ts  types.ts
