[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vietnamese-writing-skills"
version = "0.1.0"
description = "Agent Skills và công cụ kiểm tra văn phong tiếng Việt"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Vietnamese Writing Skills contributors" }]
dependencies = [
  "jsonschema>=4.22,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["benchmarks/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
