[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vietnamese-writing-skills"
version = "0.2.0"
description = "Agent Skills and lightweight tools for clearer, more natural Vietnamese writing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vietnamese Writing Skills contributors" }]
keywords = [
  "agent-skills",
  "grammar",
  "humanizer",
  "natural-language-processing",
  "vietnamese",
  "writing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: Vietnamese",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "jsonschema>=4.22,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.2,<10",
  "ruff>=0.6,<1",
]

[project.urls]
Homepage = "https://github.com/longhang2004/vietnamese-humanizer"
Repository = "https://github.com/longhang2004/vietnamese-humanizer"
Issues = "https://github.com/longhang2004/vietnamese-humanizer/issues"
Changelog = "https://github.com/longhang2004/vietnamese-humanizer/blob/main/CHANGELOG.md"
Documentation = "https://github.com/longhang2004/vietnamese-humanizer/tree/main/docs"

[project.scripts]
viet-writing-lint = "vietnamese_writing_skills.cli.lint:main"
viet-writing-validate-skills = "vietnamese_writing_skills.cli.validate_skills:main"
viet-writing-validate-patterns = "vietnamese_writing_skills.cli.validate_patterns:main"
viet-writing-validate-examples = "vietnamese_writing_skills.cli.validate_examples:main"
viet-writing-benchmark = "vietnamese_writing_skills.cli.benchmarks:main"
viet-writing-generate-docs = "vietnamese_writing_skills.cli.generate_docs:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vietnamese_writing_skills"]

[tool.hatch.build.targets.wheel.force-include]
"patterns" = "vietnamese_writing_skills/data/patterns"
"skills" = "vietnamese_writing_skills/data/skills"
"examples" = "vietnamese_writing_skills/data/examples"
"benchmarks" = "vietnamese_writing_skills/data/benchmarks"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["benchmarks/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
