[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vietnamese-writing-skills-web"
version = "0.3.1"
description = "Web API backend for Vietnamese Writing Skills"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.3.0",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "vietnamese-writing-skills>=0.2.0",
  "google-genai>=0.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
